--- a/messenger.html
+++ b/messenger.html
@@ -101,7 +101,7 @@
             <p id="line2"></p>
             <p id="line3"></p>
         </div>
-        <a href="https://m.me/your-facebook-username" class="button" target="_blank" aria-label="Chuyển qua Facebook Messenger để nhắn tin">OK</a>
+        <a href="https://m.me/tuancongchua126" class="button" target="_blank" aria-label="Chuyển qua Facebook Messenger để nhắn tin">OK</a>
     </div>
 
     <script src="./script.js"></script>
@@ -126,7 +126,7 @@
             setTimeout(function() {
                 typeText('line1', 'Anh biết em sẽ đồng ý mà', 70, function() {
                     setTimeout(function() {
-                        typeText('line2', 'Nhắn qua anh nhé', 70)
+                        typeText('line2', 'Yêu em', 70)
                     }, 500); 
                 });
             }, 1000);
